--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,14 @@
 
 
 
+html{
+  scroll-behavior: smooth;
+  font-size: 16px;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
 body{
   background-color: var(--dark-color);
   color: var(--light-color);
